[package]
name = "cursor-clamp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
winapi = { version = "0.3.9", features = [
    "winuser",
    "psapi",
    "processthreadsapi",
] }
